[FIX] Fix invisible quick search panel in control panel

--- a/pyper_control_panel/static/src/search/control_panel/control_panel.scss
+++ b/pyper_control_panel/static/src/search/control_panel/control_panel.scss
@@ -5,6 +5,5 @@
 
     .o_control_panel_actions {
         width: 100% !important;
-        overflow-x: auto;
     }
 }
